    (M-x haskell-process-load-or-reload)
  - Fix haskell-interactive-mode prompt detection
  - Add cabal-ghci as supported process mode
  - Add a customization option for the visibility of multi-line errors
    (M-x customize-variable RET haskell-interactive-mode-hide-multi-line-errors)

- Add forward declarations to reduce Elisp bytecompile warnings

- Improvements to `haskell-indentation`
  - Indent "=" following data/type/newtype declarations.
  - Align arrows in types under "::"
  - Make customizable whether "<backspace>" deletes indentation too
    (via `haskell-indentation-delete-backward-indentation` and
     `haskell-indentation-delete-indentation`)
  - Properly indent 'rec' keyword, same as 'mdo'

- Add support for "'"-prefixed constructors to font-locking

- New experimental haskell session menu mode (M-x haskell-menu)

- Various minor cleanups/fixes/improvements...

* Changes in 2.9.1

See also [[https://github.com/haskell/haskell-mode/compare/2_9_0...2_9_1][detailed Git history]].

- Bugfix release adding missing autoload declaration

* Changes in 2.9.0

See also [[https://github.com/haskell/haskell-mode/compare/2_8_0...2_9_0][detailed Git history]].

- This is the first release after haskell-mode was migrated to GitHub

- New experimental `haskell-interactive-mode' module implementing a
  new REPL interaction mode for GHCi sessions to eventually replace
  the existing "inf-haskell" mode.

- New `haskell-process-cabal' command for interaction with cabal-install

- New `haskell-checkers' module

- Update haskell-cabal-mode font-lock keywords

- Improve scrolling of hoogle output (haskell-mode.el)

- Derive `haskell-mode` from `prog-mode` for Emacs 24+

- Add new binding for "<backtab>" to haskell-mode's keymap which
  unindents current line

- New modules `haskell-navigate-imports`, `haskell-sort-imports' and
  `haskell-align-imports' for operating on module import lines in
  Haskell source code
